Graduation: add getAllWithMenu method for RestaurantController